--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,16 +11,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
     <TextView
         android:text="--"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:id="@+id/concentrationLabel"
-        android:textSize="100sp"/>
+        android:textSize="100sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="130dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,11 +37,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Last updated at 6:45 a.m. AST on August 17, 2015"
-        android:id="@+id/lastRefreshLabel"
-        android:layout_marginBottom="72dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="12sp"/>
+        android:id="@+id/summaryLabel"
+        android:layout_alignTop="@+id/concentrationLabel"
+        android:layout_centerHorizontal="true"
+        android:text="At 7:28 a.m. AST"
+        />
 </RelativeLayout>
