--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,7 @@
     >
 
     <TextView
-        android:text="--"
+        android:text="-"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/concentrationLabel"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/summaryLabel"
-        android:text="LAST UPDATED AT 07:28 AST"
+        android:text="-"
         android:layout_below="@+id/unitsLabel"
         android:layout_centerHorizontal="true"
         android:textSize="12sp"
